--- a/index.html
+++ b/index.html
@@ -6,21 +6,49 @@
 	<link rel="stylesheet" type="text/css" href="asset/style.css"> 
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0C69YC2J2B"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	</head>
 <body>
-	<div class="main-content">
-		Aguardando video <b class="piscar">...</b>
+	<!-- principal -->
+	<div id="lol">
+		<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+			<img src="https://raw.githubusercontent.com/CodeVinc/pornhub-ext/main/app/logo.png" width="155" height="50" class="d-inline-block align-top" alt="Brazzucas">		
+			<div class="collapse navbar-collapse">
+			  <div class="navbar-nav">
+				<a class="nav-link active" href="/">Home</a>
+				<a class="nav-link" href="#">Extensão para Navegador</a>
+			  </div>
+			</div>
+		  </nav>	
+		<div class="main-content">
+			<div class="form-center">
+				<input type="url" class="input-url" id="searchURL" placeholder="URL DO VIDEO PREMIUM">
+				<button class="button-url" id="searcBUTTON" type="submit">Procurar</button>
+				<div class="label-url">Examplo: https://pt.pornhubpremium.com/premium_signup?ats=XXXXXXX&join=52&pp=292&viewkey=ph5fb6d20ab4659</div>
+			</div>
+			<div class="pop-content">
+				<div class="pop-text">
+					Para mais scripts ou entrar em contato.
+					<div style="margin-top: 5px;">
+						<a href="https://t.me/ByOltiz" target="_blank" rel="noopener noreferrer">Canal no Telegram</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="footer">
+			Projeto criado por Oltiz
+		</div>	
 	</div>
-	<div class="footer">
-		Projeto criado por Oltiz
-	</div>
+	<!-- player de video -->
 	<div id="player_div"></div>
+	<!-- ads -->
 	<script type="text/javascript">
 	    var adfly_id = 16408729; 
-	    var popunder_frequency_delay = 0; 
+	    var popunder_frequency_delay = 5; 
 	    var adfly_protocol = 'https';	
 	    var adfly_google_compliant = false;
 	</script>
+	<!-- google -->
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
