--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 			<div class="pop-content">
 				<div class="pop-text">
-					Para mais scripts ou entrar em contato.
+					Vá para um pagina no pornhub premium, copie a URL e cole no campo acima, clique em procurar, e você será redirecionado para assitir o video! 
 					<div style="margin-top: 5px;">
 						<a href="https://t.me/ByOltiz" target="_blank" rel="noopener noreferrer">Canal no Telegram</a>
 					</div>
