--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>PornHub Premium</title>
+	<title>Pornhub Premium</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="asset/style.css"> 
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0C69YC2J2B"></script>
