--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 			<div class="pop-content">
 				<div class="pop-text">
-					Vá para um pagina do video no pornhub premium, copie toda a url e cole no campo acima,e clique em procurar, depois você será redirecionado para assitir o video! 
+					Vá para a pagina do video dentro do pornhub premium, copie toda a url e cole no campo acima, em seguida clique em procurar, logo depois você será redirecionado para o video! :) 
 					<div style="margin-top: 5px;">
 						<a href="https://t.me/ByOltiz" target="_blank" rel="noopener noreferrer">Canal no Telegram</a>
 					</div>
